<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:backgroundTint="?attr/background"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/logo" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="281dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/khulasbold"
            android:onClick="validateAndLogin"
            android:text="@string/login_signin_button"
            android:textColor="?attr/background"
            android:typeface="normal"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/gLoginButton"
            android:layout_width="281dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/khulasbold"
            android:onClick="smailLogin"
            android:text="@string/login_gsignin_button"
            android:textColor="?attr/background"
            android:typeface="normal"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_view">

            <EditText
                android:id="@+id/rollInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:ems="10"
                android:fontFamily="@font/khularegular"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorSecondary"
                android:textSize="17sp"
                android:typeface="normal"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roll_input_label" />

            <TextView
                android:id="@+id/roll_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:alpha="0.6"
                android:text="@string/login_roll_hint"
                android:textColor="?attr/colorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <EditText
                android:id="@+id/passInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:ems="10"
                android:fontFamily="@font/khularegular"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="?attr/colorSecondary"
                android:textSize="17sp"
                android:typeface="normal"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_input_label" />

            <TextView
                android:id="@+id/pass_input_label"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:alpha="0.6"
                android:fontFamily="@font/khularegular"
                android:text="@string/login_pass_hint"
                android:textColor="?attr/colorSecondary"
                android:textSize="12sp"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>